force-app/main/default/objects/AD8_Form__c/AD8_Form__c.object-meta.xml
<CustomObject>
    <label>AD8 Form</label>
    <nameField>
        <displayFormat>AD8-{0000}</displayFormat>
        <label>AD8 Form #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AD8 Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>