force-app/main/default/objects/AD8_Form__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <label>Consumer Name</label>
    <type>TextArea</type>
</CustomField>