force-app/main/default/objects/AD8_Form__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AD8 Forms</relationshipLabel>
    <relationshipName>AD8_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>