force-app/main/default/objects/AD8_Form__c/fields/Total_of_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Not_Applicable__c</fullName>
    <label>Total # of &quot;Not Applicable&quot;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>